ADD: kata 10 solved