@@ -8,6 +8,8 @@ import util.DataUtil;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /*
     Goal: Create a datastructure from the given data:
@@ -55,9 +57,13 @@ public class Kata10 {
         List<Map> lists = DataUtil.getLists();
         List<Map> videos = DataUtil.getVideos();
 
-        return ImmutableList.of(ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
-                ImmutableMap.of("id", 5, "title", "The Chamber"),
-                ImmutableMap.of("id", 3, "title", "Fracture")
-        )));
+        Function<String, List<Map>> getVideos = (listId) -> videos.stream()
+                .filter(video -> video.get("listId").toString().equals(listId))
+                        .map(video -> Map.of("id",video.get("id"),"title",video.get("title")))
+                .collect(Collectors.toList());
+
+        return lists.stream().map(list -> Map.of("name", list.get("name"), "videos", getVideos.apply(list.get("id").toString())))
+                .collect(Collectors.toList());
+
     }
 }
